Fix clock overflow and fit page to Kindle Paperwhite viewport
Reduce #lastUpdate from 40rem to 25rem to prevent "HH:mm" text
from exceeding the 1072px viewport width. Reduce .colTime from
10rem to 7rem to keep forecast times within their columns. Remove
left offset on clock for proper centering.

All elements now fit within 1072 x 1231px without scrolling.

--- a/css/kindle.css
+++ b/css/kindle.css
@@ -71,8 +71,8 @@ html.night {
 #lastUpdate {
     position: relative;
     top: 24%;
-    left: 2%;
-    font-size: 40rem;
+    left: 0%;
+    font-size: 25rem;
     font-weight: bolder;
     text-align: center;
     font-family: electronicFont;
@@ -163,7 +163,7 @@ html.night {
 
 .colTime {
     position: relative;
-    font-size: 10rem;
+    font-size: 7rem;
     left:3%;
     font-weight: bolder;
     text-align: center;
